fix: P4ADEV-4571 add services to monitoring core health (#388)